--- a/index.html
+++ b/index.html
@@ -3,52 +3,139 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bulbasaur te ama</title>
+  <title>Para ti, mi amor 💚</title>
   <style>
     body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #d0f0c0, #a0e0a0);
-      color: #2d4739;
+      background: linear-gradient(to bottom right, #e0f7da, #b9fbc0);
+      color: #1b4332;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       text-align: center;
+      position: relative;
     }
 
     h1 {
-      font-size: 3em;
-      color: #2b9348;
+      font-size: 2.8em;
+      color: #2d6a4f;
+      margin-bottom: 0.5em;
     }
 
     img {
-      max-width: 300px;
-      border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      max-width: 320px;
+      border-radius: 16px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
       margin: 20px 0;
     }
 
     p {
-      font-size: 2em;
+      font-size: 1.8em;
       color: #40916c;
-      margin-top: 0;
+      margin: 10px 30px;
+      max-width: 600px;
     }
 
-    footer {
-      position: absolute;
-      bottom: 10px;
-      font-size: 0.9em;
-      color: #555;
+    .heart {
+      font-size: 2.2em;
+      color: #ff6b6b;
+      animation: pulse 1.5s infinite;
     }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.15); }
+      100% { transform: scale(1); }
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 1.2em;
+      background-color: #52b788;
+      color: white;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #40916c;
+    }
+
+    .mensaje-secreto {
+      margin-top: 20px;
+      font-size: 1.5em;
+      color: #2d6a4f;
+      display: none;
+    }
+
+    .corazon {
+      position: absolute;
+      color: #ff6b6b;
+      font-size: 1.5em;
+      animation: flotar 8s infinite ease-in;
+      opacity: 0.6;
+    }
+
+    @keyframes flotar {
+      0% {
+        transform: translateY(100vh) scale(1);
+        opacity: 0;
+      }
+      10% {
+        opacity: 0.8;
+      }
+      100% {
+        transform: translateY(-10vh) scale(1.5);
+        opacity: 0;
+      }
+    }
+
   </style>
 </head>
 <body>
-  <h1>🌱 Te amo mucho 🌱</h1>
-  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur feliz">
-  <p>Bulbasaur está contigo 💚</p>
-  <footer>Hecho con amor y Pokémon 🌿</footer>
+
+  <h1>💚 Para ti, que amas a Bulbasaur 💚</h1>
+  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur tierno">
+  <p>Sé que Bulbasaur es tu favorito...</p>
+  <p class="heart">...y yo quiero ser tu Pokémon favorito también ✨</p>
+  <p>Te amo mucho, con todo mi corazón. Gracias por ser parte de mi vida 🌿</p>
+
+  <button onclick="mostrarMensaje()">Yo también te amo 💖</button>
+  <div class="mensaje-secreto" id="mensaje">
+    ¡Eso me hace tan feliz! ¡Te elijo a ti! 🥰💚
+  </div>
+
+  <footer>Con mucho amor, de tu pareja 💕</footer>
+
+  <!-- Corazones flotantes -->
+  <script>
+    // Mostrar mensaje al hacer clic
+    function mostrarMensaje() {
+      document.getElementById('mensaje').style.display = 'block';
+    }
+
+    // Crear corazones animados
+    function crearCorazon() {
+      const corazon = document.createElement('div');
+      corazon.classList.add('corazon');
+      corazon.innerText = '❤️';
+      corazon.style.left = Math.random() * 100 + 'vw';
+      corazon.style.animationDuration = 5 + Math.random() * 5 + 's';
+      document.body.appendChild(corazon);
+      setTimeout(() => corazon.remove(), 10000);
+    }
+
+    setInterval(crearCorazon, 500);
+  </script>
+
 </body>
 </html>
+
